--- a/styles/style.css
+++ b/styles/style.css
@@ -22,12 +22,21 @@
   header nav{
     max-width:90%;
   }
-  header nav a{
+  header nav ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  header nav ul li{
+    list-style-type: none;
+    display: inline;
+  }
+  header nav ul li a{
     position: relative;
     color: white;
     margin: 4rem;  
   }
-  header nav a img:hover{
+  header nav ul li a img:hover{
     cursor: pointer;
     transition: 1 ease-in-out;
     margin-top: -0.2em;
@@ -42,11 +51,11 @@
   }
 
   /* Icoon 1 Pijltje */
-  header nav a:first-of-type{ 
+  header nav ul li:first-of-type a{ 
     margin-right: 60vw;
     margin-left: -2vw;
   } 
-  header nav a:first-of-type img{
+  header nav ul li:first-of-type a img{
     position: absolute;
     width: 6vw;
     height: 9vh;
@@ -63,7 +72,7 @@
 
 
   /* Icoon 2 Feestmuts -> Dansen */
-  header nav a:nth-child(2) img{
+  header nav ul li:nth-child(2) a img{
     position: absolute;
     width: 5vw;
     height: 11vh;
@@ -86,7 +95,7 @@
 
 
   /* Icoon 3 Klimmen */
-  header nav a:nth-child(3) img{
+  header nav ul li:nth-child(3) a img{
     position: absolute;
     width: 4.5vw;
     height: 11vh;
@@ -109,7 +118,7 @@
 
 
   /* Icoon 4 Stuur -> Autorijden */
-  header nav a:nth-child(4) img{
+  header nav ul li:nth-child(4) a img{
     position: absolute;
     width: 6vw;
     height: 11vh;
